@@ -230,9 +230,11 @@
 #             Bei e /= 0 ist das höchstwertige Bit =1.
 #             n>=ceiling(53/intDsize), damit ein LF nicht weniger Mantissenbits hat als ein DF.
   #define LF_minlen  ceiling(53,intDsize)
+# Define as 'unsigned int', not 'unsigned long', so that
+# LF_exp_high+1 wraps around to 0 just like the 'expo' field does.
   #define LF_exp_low  1
-  #define LF_exp_mid  0x80000000UL
-  #define LF_exp_high 0xFFFFFFFFUL
+  #define LF_exp_mid  0x80000000U
+  #define LF_exp_high 0xFFFFFFFFU
 #ifdef TYPECODES
   # Typinfo-Byte für LF >=0 :
     #define LF_type     lfloat_type
